# mcp-helix

./: .env.example  .gitignore  README.md  pyproject.toml
src/mcp_helix/: __init__.py  auth.py  client.py  config.py  generated_tools.py  server.py
